# computer-graphics

./: .gitignore  CMakeLists.txt  README.md  WORKSPACE  bran.sh  references.txt
activity-1/: CMakeLists.txt  README.md
activity-1/lib/Image/: CMakeLists.txt  Image.cpp  Image.hpp
activity-1/lib/Pixel/: CMakeLists.txt  Pixel.cpp  Pixel.hpp
activity-1/lib/headers/: Pixel.hpp
activity-1/lib/src/: Image.cpp  Pixel.cpp
activity-1/main/: CMakeLists.txt  colombia.cpp  england.cpp  france.cpp
activity-1/src/colombia/: colombia.cpp
activity-1/src/england/: england
activity-1/src/france/: france  france.cpp
activity-1/src/lib/Image/: BUILD  Image.cpp  Image.hpp
activity-1/src/lib/Pixel/: BUILD.bazel  Pixel.cpp
activity-1/src/main/: BUILD.bazel  colombia.cpp  england.cpp  france.cpp
activity-2/: CMakeLists.txt  README.md
activity-2/lib/Color/: CMakeLists.txt  Color.cpp  Color.hpp
activity-2/lib/Image/: CMakeLists.txt  Image.cpp  Image.hpp
activity-2/lib/Vec3/: CMakeLists.txt  Vec3.hpp
activity-2/lib/headers/: Color.hpp  Image.hpp  Vec3.hpp
activity-2/lib/src/: Color.cpp  Vec3.cpp
activity-2/main/: CMakeLists.txt  colombia.cpp
activity-2/src/colombia/: colombia
activity-2/src/england/: england.cpp
activity-2/src/lib/Color/: BUILD.bazel  Color.hpp
activity-2/src/lib/Image/: BUILD  Image.cpp  Image.hpp
activity-2/src/lib/Vec3/: BUILD  Vec3.cpp  Vec3.hpp
activity-2/src/main/: BUILD.bazel  colombia.cpp  england.cpp  france.cpp
activity-2/tests/: BUILD.bazel  CMakeLists.txt  Vec3Lib_test.cpp  Vec3_test.cpp
activity-3/: CMakeLists.txt  README.md
activity-3/lib/ObjFile/: CMakeLists.txt  ObjFile.cpp  ObjFile.hpp
activity-3/lib/Vec3/: Vec3.cpp  Vec3.hpp
activity-3/main/: CMakeLists.txt  main.cpp
activity-3/tests/: CMakeLists.txt  ObjFile_test.cpp  Obj_test.cpp
activity-4/: CMakeLists.txt  README.md
activity-4/lib/Ray/: CMakeLists.txt  Ray.cpp  Ray.hpp
activity-4/lib/Vec2/: CMakeLists.txt  Vec2.cpp  Vec2.hpp
activity-4/lib/Vec3/: Vec3.cpp  Vec3.hpp
activity-4/main/: CMakeLists.txt  main.cpp
