FILE(GLOB MAIN_SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
FOREACH(SOURCE_FILE ${MAIN_SOURCE_FILES})
	GET_FILENAME_COMPONENT(EXECUTABLE_NAME ${SOURCE_FILE} NAME_WE)
	SET(FILENAME ${ACTIVITY_NAME}_${EXECUTABLE_NAME})

	ADD_EXECUTABLE(${FILENAME} ${SOURCE_FILE})
	TARGET_LINK_LIBRARIES(${FILENAME} ${ImageLibrary} ${PixelLibrary})
ENDFOREACH()
