load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
	name = "colombia",
	srcs = ["colombia.cpp"],
	deps = [
  	"//activity-2/src/lib/Image:ImageLib", 
   	"//activity-2/src/lib/Color:ColorLib"
  ]
)

cc_binary(
	name = "england",
	srcs = ["england.cpp"],
	deps = [
  	"//activity-2/src/lib/Image:ImageLib", 
   	"//activity-2/src/lib/Color:ColorLib"
  ]
)

cc_binary(
	name = "france",
	srcs = ["france.cpp"],
	deps = [
  	"//activity-2/src/lib/Image:ImageLib", 
   	"//activity-2/src/lib/Color:ColorLib"
  ]
)